--- a/churchill-content/assets/css/style.css
+++ b/churchill-content/assets/css/style.css
@@ -5,7 +5,18 @@
     color: ;
 }
 
+html{
+    --green: #4b9162;
+}
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover{
+    background-color: var(--green)
+}
 
 body{
     font-size: 18px;
@@ -64,7 +75,13 @@ p{
     margin: 5rem 0 1rem 2rem;
     
 }
-
+.intropic{
+    box-sizing: border-box;
+}
+.intropic:hover{
+    border:10px solid #000000;
+    
+}
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -85,6 +102,19 @@ p{
     float:right;
 } */
 
+.flex-gallery{
+    display: flex;
+    flex-wrap: wrap;
+}
+.flex-gallery > li{
+    width: 40%;
+    flex-grow: 1;
+}
+.flex-gallery img{
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+}
 .row-hero{
     width:1960;
     margin-bottom; 5rem;
@@ -103,3 +133,4 @@ p{
 /*        grid-template-columns: 1fr;*/
     }
 }
+
